<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20sp"
    android:layout_gravity="center_vertical">
    <LinearLayout
        android:id="@+id/shopping_title"
        android:gravity="center"
        android:layout_marginVertical="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="261dp"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:text="@string/shopping_list"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView

        android:layout_below="@+id/shopping_title"
        android:id="@+id/list_todo"
        android:layout_width="wrap_content"
        android:layout_height="300dp">
    </ListView>

    <RelativeLayout
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_todo"
        android:visibility="visible">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_value"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="30sp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/name"
        android:layout_below="@id/total"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300sp"
            android:text="@string/name_value"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/email"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300sp"
            android:layout_height="match_parent"
            android:text="@string/email_value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/username"
        android:layout_below="@id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold" />
        <TextView
            android:layout_width="300sp"
            android:text="@string/username_value"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/username"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/ok"
            android:theme="@style/Widget.AppCompat.Button.Colored" />
    </RelativeLayout>
</RelativeLayout>