<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/item_id"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/id"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        app:srcCompat="?android:attr/textCursorDrawable" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginEnd="32sp"
        android:layout_marginRight="32sp"
        android:text="@string/title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:text="@string/price"
        android:textSize="20sp"
        android:layout_alignParentRight="true" />
</RelativeLayout>